# dev71

./: .bazelrc  .buckconfig  .envrc  .gitattributes  .gitignore  BUCK  BUILD  Build.zig  Cargo.toml  Justfile  MODULE.bazel  Package.nix  Package.swift  Project.swift  build  build.sh  build.zig  build.zig.zon  cbindgen.toml  defs.bzl  flake.nix  packages.nix  prelude.pkg.nix  run  rust-project  rust-toolchain.toml  rustlibs.nix  shell.nix  treefmt.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4i4j88q7ij4lf9irqyn0nn1h4hbd1lh8-source
.slash/: reindeer
.sourcekit-lsp/: config.json
.zed/: settings.json
core/: BUILD
core/src/: lib.rs
darwin/: .envrc  .gitignore  Project.swift
darwin/Dev71/Sources/: ContentView.swift  Dev71App.swift
darwin/Dev71/Tests/: Dev71Tests.swift
darwin/Tuist/: Package.swift
data/: Info.plist
dev/editor-support/helix/: languages.toml
dev/nix/: flake.nix  format-module.nix
dev/nix/pkgs.buck2/: default.nix
etc/editor-support/.helix/: languages.toml
etc/editor-support/.zed/: settings.json
include/: cbindgen.toml  dev71.h  module.modulemap
include/dev71/: core.h
ios/: BUILD
ios/Sources/: App.swift
nix/: darwin-module.nix  default.nix  dev@.toml  flake.nix  format-module.nix  shell.nix
nix/apps/: xcgen.nix
nix/dev/: rust-toolchain  shell.nix
nix/npins/: sources.json
nix/pkgs/: buck2.nix  default.nix  rust-project.nix
nix/pkgs/buck2/: default.nix
src/: BUCK  Main.swift  cbindgen.toml  main.swift
src-ios/: App.swift  BUCK  BUILD  PACKAGE
src-ios/Dev71/: ContentView.swift  Main.swift
src-ios/Dev71/Tests/: Test.swift
src-lib/: BUCK  BUILD  lib.rs
src-lib/core71/: lib.rs
src-lib/include/: core71.h  module.modulemap
src/bin.server/: BUILD
src/clients/: BUCK  Main.swift
src/clients/darwin/: App.swift  main.swift
src/drv/: dev71.nix  prelude.nix
src/ios.dev71/: BUILD
src/ios.dev71/Sources/: App.swift  ContentView.swift
src/lib.core71/: BUILD
src/lib.core71/include/: core71.h
src/lib.core71/src/: lib.rs
src/mls/: mls.c  mls.h
src/prelude/: prelude.h  prelude.rs  prelude.zig
src/prelude/include/: module.modulemap
